# ctrlq

./: .CMakeLists.txt.swp  .gitmodules  CMakeLists.txt  LICENSE  README.md
ctrlq/cvqe/: .#ham.py  __init__.py  _adapt.py  _anagaussian.py  _anasquare.py  _energy.py  _flattop.py  _grad.py  _opt.py  _optparam.py  _optpulsefreq.py  device.py  drift.py  evolve.py  ham.py  kernel.py  omisc.py  pulse.py
ctrlq/lib/: CMakeLists.txt  agradc.cc  agradc.h  getham.cc  getham.h  grad_ana.cc  grad_ana.h  pulse_helper.cc  pulsec.h  pulsehelper.h  solve.cc  trotter.cc
doc/: Makefile  requirements.txt
doc/source/: .gitignore  adapt.rst~  conf.py  ham.rst  index.rst  install.rst  kernel.rst  pulse.rst  tutorial.rst
example/: adapt.py  adapt.py~  h2.py  lih.py
mole/: molecule.py
test/: test_h2_ode_normalize.py  test_h2_ode_unnormalize.py  test_h2_trotter_normalize.py  test_h2_trotter_unnormalize.py
